--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1294,7 +1294,7 @@
             android:background="@color/colorBackgroundRelativeLayoutEmployes"
             android:layout_marginTop="40dp"
             android:alpha="0.9"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:id="@+id/RelativeLayoutContentDetailSecuriteInformatique"
@@ -1773,7 +1773,7 @@
                         android:layout_marginStart="240dp"
                         android:layout_marginEnd="50dp"
                         android:background="@drawable/custom_relative_layout_information"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
