implementation methode doevents
implementation fonction popup pour choix utilisateur suite a evenement

creation evenement quand apéros trop rapprochés

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2233,7 +2233,7 @@
                             android:id="@+id/TextViewArgentApero"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/textMIseAJourSysteme"
+                            android:text="@string/prixApero"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10dp"
                             android:layout_toEndOf="@+id/ImageViewArgentApero"
