--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1294,7 +1294,7 @@
             android:background="@color/colorBackgroundRelativeLayoutEmployes"
             android:layout_marginTop="40dp"
             android:alpha="0.9"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <RelativeLayout
                 android:id="@+id/RelativeLayoutContentDetailSecuriteInformatique"
@@ -3188,14 +3188,16 @@
         android:id="@+id/RelativeLayoutRessources"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <RelativeLayout
             android:id="@+id/RelativeLayoutArgent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
             android:layout_marginBottom="2dp">
 
             <ImageView
@@ -3229,9 +3231,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
+            android:layout_marginBottom="2dp"
             android:clickable="true"
-            android:focusable="true"
-            android:layout_marginBottom="2dp">
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/ImageViewHommes"
@@ -3258,8 +3260,8 @@
             android:id="@+id/RelativeLayoutRessource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp">
 
             <ImageView
