--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1286,7 +1286,7 @@
                         android:layout_marginEnd="50dp"
                         android:layout_marginStart="240dp"
                         android:background="@drawable/custom_relative_layout_information"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
