--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1893,7 +1893,7 @@
                         android:layout_alignEnd="@+id/ProgressBarNiveauReputation"
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="10dp"
-                        android:text="@string/niveau_reputation"
+                        android:text="50"
                         android:textColor="@color/colorNiveauSecuriteInformatique"
                         android:textSize="15sp" />
                 </RelativeLayout>
@@ -1920,30 +1920,19 @@
                             android:text="@string/parite"
                             android:textSize="25sp" />
 
-                        <ImageButton
-                            android:id="@+id/ImageButtonUpParite"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="150dp"
-                            android:layout_toEndOf="@+id/TextViewParite"
-                            android:background="@color/colorBackgroundRelativeLayoutEmployes"
-                            android:contentDescription="@string/description_icone_up"
-                            android:src="@drawable/up" />
-
                         <ProgressBar
                             android:id="@+id/ProgressBarParite"
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="195dp"
                             android:layout_height="20dp"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="20dp"
-                            android:layout_toEndOf="@+id/ImageButtonUpParite"
+                            android:layout_marginStart="285dp"
+                            android:layout_toEndOf="@+id/TextViewParite"
                             android:alpha="1"
                             android:indeterminate="false"
                             android:indeterminateTintMode="src_atop"
                             android:max="100"
-                            android:progress="90"
+                            android:progress="50"
                             android:progressDrawable="@drawable/custom_progress_bar_formation_employes" />
 
                         <ImageButton
@@ -1980,11 +1969,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:text="@string/campagneCom"
+                            android:text="LANCER CAMPAGNE COMMUNICATION"
                             android:textSize="25sp" />
 
                         <ImageButton
-                            android:id="@+id/ImageButtonUpCampagneCOm"
+                            android:id="@+id/ImageButtonUpCampagneCom"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
@@ -2000,7 +1989,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="20dp"
-                            android:layout_toEndOf="@+id/ImageButtonUpCampagneCOm"
+                            android:layout_toEndOf="@+id/ImageButtonUpCampagneCom"
                             android:contentDescription="@string/description_image_argent"
                             android:src="@drawable/argent_antivirus" />
 
@@ -2232,7 +2221,7 @@
                             android:indeterminate="false"
                             android:indeterminateTintMode="src_atop"
                             android:max="100"
-                            android:progress="55"
+                            android:progress="50"
                             android:progressDrawable="@drawable/custom_progress_bar_niveau_reputation" />
 
                         <ImageButton
