--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2035,7 +2035,7 @@
             android:layout_marginTop="40dp"
             android:alpha="0.9"
             android:background="@color/colorBackgroundRelativeLayoutEmployes"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:id="@+id/RelativeLayoutContentDetailBonheur"
